--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_hooks: ^0.21.2
   math_expressions: ^2.7.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
